feat: import IIIF manifest
