# crest-annotation-backend/app/schemas/__init__.py
@@ -1,5 +1,6 @@
 from .label import Label, PatchLabel, CreateLabel
-from .object import Object, ShallowObject
+from .object import Object
 from .project import Project, ShallowProject
 from .ontology import Ontology, OntologyDescription, OntologyLabel
 from .sorting import SortDirection
+from .iiif import Iiif3Import
