# crest-annotation-backend/app/schemas/object.py
@@ -2,14 +2,17 @@ from typing import Optional
 from pydantic import BaseModel
 
 
-# TODO: schemas are outdated, see label.py
+from .modifiers import create, patch, response
+
+
 class BaseObject(BaseModel):
+    id: str
+    uri: str
+    thumbnail_uri: Optional[str]
+    annotated: bool
     annotation_data: str
 
 
-class ShallowObject(BaseObject):
-    id: Optional[str]
-
-
+@response()
 class Object(BaseObject):
-    id: str
+    pass
